[gd_scene load_steps=5 format=3 uid="uid://runhud"]

[ext_resource type="Script" path="res://scripts/ui/run_hud_controller.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/dice/dice_viewport.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/resource_panel.tscn" id="3"]

[node name="RunHUD" type="Control"]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
script = ExtResource("1")

[node name="MainLayout" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 6.10352e-05
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResourcePanel" parent="MainLayout" instance=ExtResource("3")]

[node name="Title" type="Label" parent="MainLayout"]
text = "Bermuda Sector Run HUD"

[node name="DiceTray" type="VBoxContainer" parent="MainLayout"]
size_flags_vertical = 3

[node name="DiceViewportContainer" parent="MainLayout/DiceTray" instance=ExtResource("2")]

[node name="DiceValues" type="HBoxContainer" parent="MainLayout/DiceTray"]
size_flags_horizontal = 3

[node name="Die0" type="Label" parent="MainLayout/DiceTray/DiceValues"]
text = "Die A: 1"

[node name="Die1" type="Label" parent="MainLayout/DiceTray/DiceValues"]
text = "Die B: 1"

[node name="Die2" type="Label" parent="MainLayout/DiceTray/DiceValues"]
text = "Die C: 1"

[node name="LockRow" type="HBoxContainer" parent="MainLayout/DiceTray"]

[node name="Lock0" type="Button" parent="MainLayout/DiceTray/LockRow"]
text = "Lock A"

[node name="Lock1" type="Button" parent="MainLayout/DiceTray/LockRow"]
text = "Lock B"

[node name="Lock2" type="Button" parent="MainLayout/DiceTray/LockRow"]
text = "Lock C"

[node name="ActionButtons" type="HBoxContainer" parent="MainLayout"]

[node name="RollButton" type="Button" parent="MainLayout/ActionButtons"]
text = "Roll"

[node name="ConfirmButton" type="Button" parent="MainLayout/ActionButtons"]
text = "Confirm"

[node name="ExhaustTray" type="HBoxContainer" parent="MainLayout"]

[node name="ExhaustLabel" type="Label" parent="MainLayout/ExhaustTray"]
text = "Exhausted Dice: none"
